--- a/gynecology.html
+++ b/gynecology.html
@@ -15,17 +15,32 @@
 
   <header class="page__header header">
     <div class="header__wrapper center">
-      <a href="index.html">
         <div class="header__logo">
+          <a href="index.html">
           <img src="img/logo.png" alt="Логотип" class="header__img">
           <p class="header__logo-text">клиника урологии<br>и гинекологии «МедЭйт»</p>
+          </a>
         </div>
-      </a>
       <div class="header__call">
         <a href="tel:88001234567" class="header__phone header__phone--white text-20-bold">8 (800) 123-4-567</a>
         <p class="header__phone-text header__phone-text--white">Бесплатно по России</p>
       </div>
+      <div class="header__sandwich header__sandwich--white" id="mobBtn"></div>
     </div>
+    <div class="header__mobile-menu mobile-menu" id="mobMenu">
+      <div class="mobile-menu__wrapper">
+        <span class="mobile-menu__closed closed">&times;</span>
+        <ul class="mobile-menu__list">
+          <li class="mobile-menu__item"><a href="index.html#general">О клинике</a></li>
+          <li class="mobile-menu__item"><a href="#doctors">Врачи</a></li>
+          <li class="mobile-menu__item"><a href="index.html#services">Цены</a></li>
+          <li class="mobile-menu__item"><a href="#footer">Контакты</a></li>
+          <li class="mobile-menu__item">Лицензия</li>
+          <li class="mobile-menu__item"><a href="#ask">Спросить</a></li>
+        </ul>
+      </div>
+    </div>
+
   </header>
 
   <main class="page__main main">
