--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
         <a href="tel:88001234567" class="header__phone text-20-bold">8 (800) 123-4-567</a>
         <p class="header__phone-text">Бесплатно по России</p>
       </div>
+      <div class="header__sandwich" id="mobBtn"></div>
+    </div>
+    <div class="header__mobile-menu mobile-menu" id="mobMenu">
+      <div class="mobile-menu__wrapper">
+        <span class="mobile-menu__closed closed">&times;</span>
+        <ul class="mobile-menu__list">
+          <li class="mobile-menu__item page-nav__item"><a href="#general">Запись</a></li>
+          <li class="mobile-menu__item page-nav__item"><a href="#advantages">О клинике</a></li>
+          <li class="mobile-menu__item page-nav__item"><a href="#services">Услуги</a></li>
+          <li class="mobile-menu__item page-nav__item"><a href="#benefits">Преимущества</a></li>
+          <li class="mobile-menu__item page-nav__item"><a href="urology.html">Урология</a></li>
+          <li class="mobile-menu__item page-nav__item"><a href="gynecology.html">Гинекология</a></li>
+          <li class="mobile-menu__item page-nav__item"><a href="gynecology.html#doctors">Наши врачи</a></li>
+          <li class="mobile-menu__item page-nav__item"><a href="#footer">Контакты</a></li>
+        </ul>
+      </div>
     </div>
   </header>
 
