--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <section class="main__consult consult">
       <div class="consult__wrapper center">
         <div class="consult__content">
-          <h2 class="consult__title subtitle subtitle--green">Бесплатная консультация</h2>
-          <p class="consult__subtitle title title--green">Позаботьтесь о своем<br>здоровье сейчас</p>
+          <h2 class="consult__title subtitle subtitle--green subtitle--mobile-white">Бесплатная консультация</h2>
+          <p class="consult__subtitle title title--green title--mobile-white"">Позаботьтесь о своем<br>здоровье сейчас</p>
         </div>
         <ul class="consult__page-nav page-nav">
           <li class="page-nav__item"><a href="#general">Запись</a></li>
