--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="first-screen__general general" id="general">
           <h1 class="general__title title">Клиника урологии и гинекологии</h1>
           <p class="general__subtitle subtitle ">Европейского уровня в Москве</p>
-          <button class="general__sign btn" id="myBtn">записаться на прием</button>
+          <button class="general__sign btn js-popup-open" id="myBtn">записаться на прием</button>
           <form action="" class="general__form form">
             <p class="form__title">Оставьте контакты, и вам перезвонят</p>
             <div class="form__wrapper">
@@ -108,6 +108,8 @@
             <p class="article__text">
               Узкая специализация клиники позволяет обеспечить полный спектр современных методик диагностики и лечения
               заболеваний мочеполовой системы у мужчин и мочевыделительной системы у женщин.
+            </p>
+            <p class="article__text">
               «МедЭйт» работает только по направлению урологии и гинекологии – к вашим услугам эффективные и проверенные
               лечебные процедуры и ведущие квалифицированные врачи.
             </p>
@@ -121,7 +123,10 @@
             </p>
             <p class="article__text">
               Наши доктора состоят в научно медицинском Европейском и
-              Российском сообществах, принимают активное участие в профессиональных семинарах. Специалисты клиники
+              Российском сообществах, принимают активное участие в профессиональных семинарах.
+            </p>
+              <p class="article__text">
+                Специалисты клиники
               проводят медицинские исследования и регулярно повышают квалификацию, чтобы лучше заботиться о вашем
               здоровье.
             </p>
@@ -137,7 +142,7 @@
               Клиника оснащена по последнему
               слову техники, потому что ваше
               здоровье важнее экономии. В «МедЭйт» есть кабинет физиотерапии, УЗИ-кабинет, уютная приемная и комфортные
-              кабинеты для приема пациентов. У специалистов клиники есть все необходимое для оказания услуг на высоком
+              кабинеты для приема пациентов. У&nbsp;специалистов клиники есть все необходимое для оказания услуг на высоком
               уровне.
             </p>
           </div>
@@ -145,7 +150,7 @@
       </div>
     </section>
     <section class="main__place place">
-      <div class="advantages__screen-header screen-header">
+      <div class="place__screen-header screen-header">
         <div class="screen-header__line"></div>
         <h2 class="screen-header__title screen-header__title--right">Эффективное лечение и профилактика</h2>
       </div>
@@ -301,7 +306,10 @@
       </div>
       <div class="reviews__wrapper owl-carousel owl-theme">
         <div class="reviews__item">
-          <p class="reviews__text">Спасибо ФИО за внимательное отношение и помощь. Я несколько лет  не была на приеме, все откладывала,  боялась. Но пришло время сменить  спираль, и я пошла с замиранием  сердца. Доктор меня аккуратно осмотрела, объяснила, что надо не  только менять спираль, но и лечить  небольшую эрозию...  А вообще мне  лучше использовать другое противозачаточное средство с учетом  моей ситуации… Все было понятно,  без сложных терминов. Еще раз -  Спасибо!</p>
+          <p class="reviews__text">Спасибо ФИО за внимательное отношение и помощь. Я несколько лет  не была на приеме, все откладывала,  боялась. Но пришло время сменить  спираль, и я пошла с замиранием  сердца. Доктор меня аккуратно осмотрела, объяснила, что надо не  только менять спираль, но и лечить  небольшую эрозию...  
+          <br>
+          <br>
+            А вообще мне  лучше использовать другое противозачаточное средство с учетом  моей ситуации… Все было понятно,  без сложных терминов. Еще раз -  Спасибо!</p>
           <p class="reviews__author">Ирина Л., 35 лет</p>
         </div>
         <div class="reviews__item">
@@ -309,7 +317,10 @@
           <p class="reviews__author">Людмила И., 40 лет</p>
         </div>
         <div class="reviews__item">
-          <p class="reviews__text">Здравствуйте, дорогая ФИО! Вы  помните меня? Вы вели мою беременность и теперь нас трое! Оказывается, мне повезло, что я вообще забеременела. А ведь я даже  думала о том, стоит ли сохранить  беременность. Но вы сказали, что второго шанса может не быть…  Беременность протекала физиологично, как вы сказали, и в срок  я была готова к рождению сына.  Матвею вчера исполнилось 2 месяца, это здоровый мальчик, 8/9  по шкале Апгар. Я считаю, что  это и ваша заслуга тоже. Бесконечно счастлива, что попала тогда  на прием именно к вам.</p>
+          <p class="reviews__text">Здравствуйте, дорогая ФИО! Вы  помните меня? Вы вели мою беременность и теперь нас трое! Оказывается, мне повезло, что я вообще забеременела. А ведь я даже  думала о том, стоит ли сохранить  беременность. Но вы сказали, что второго шанса может не быть…  Беременность протекала физиологично, как вы сказали, и в срок  я была готова к рождению сына.  Матвею вчера исполнилось 2 месяца, это здоровый мальчик, 8/9  по шкале Апгар.
+            <br>
+            <br>
+            Я считаю, что  это и ваша заслуга тоже. Бесконечно счастлива, что попала тогда  на прием именно к вам.</p>
           <p class="reviews__author">Альбина М., 23 г.</p>
         </div>
         <div class="reviews__item">
